--- a/views/juego.erb
+++ b/views/juego.erb
@@ -1,11 +1,20 @@
-BIENVENIDO !!! <name='label'>
+<!DOCTYPE html>
+<html>
+<head>
+ <title></title>
+</head>
+<body>
+ BIENVENIDO !!! <name='label'>
 <h1 > <%=@palabraSegmentada%> </h1> 
 
 <form method="post" action="/ingresarLetra"> 
-   Letra :<input type="text" name="letra">
-   <input type="submit" name="Ingresar" value="Ingresar letra"/>    
+   Letra :<input type="text" name="letra" placeholder="ingresar Letra"> 
+   <input type="submit" name="Ingresar" value="Ingresar letra" maxlength="1" />    
   </table>
 </form>
+</body>
+</html>
+
 
 
 
