--- a/views/juego.erb
+++ b/views/juego.erb
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
- <title></title>
-</head>
-<body>
- BIENVENIDO !!! <name='label'>
-<h1 > <%=@palabraSegmentada%> </h1> 
+	<head>
+		<title>Ahorcado</title>
+	</head>
+	<body>
+	 	BIENVENIDO !!! <name='label'>
+		<h1> <%=@palabraSegmentada%> </h1> 
 
-<form method="post" action="/ingresarLetra"> 
-   Letra :<input type="text" name="letra" placeholder="ingresar Letra"> 
-   <input type="submit" name="Ingresar" value="Ingresar letra" maxlength="1" />    
-  </table>
-</form>
-</body>
+		<form method="post" action="/ingresarLetra"> 
+	   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" /> 
+	   		<input type="submit" name="Ingresar" value="Ingresar letra" maxlength="1" />   
+		</form>
+	</body>
 </html>
-
-
-
-
