--- a/views/juego.erb
+++ b/views/juego.erb
@@ -7,6 +7,9 @@
 	 	BIENVENIDO !!! <name='label'>
 		<h1> <%=@palabraSegmentada%> </h1> 
 
+		
+		<h2> Tu puntuación : <%=@puntuacion%> </h2> 
+
 		<form method="post" action="/ingresarLetra"> 
 	   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" /> 
 	   		<input type="submit" name="Ingresar" value="Ingresar letra" maxlength="1" />   
