registro de palabra

--- a/views/juego.erb
+++ b/views/juego.erb
@@ -9,8 +9,8 @@
 		<center><h2> Tu puntuación : <%=@puntuacion%> </h2> 
 
 		<form method="post" action="/ingresarLetra"> 
-	   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" /> 
-	   		<input type="submit" name="Ingresar" value="Ingresar letra" maxlength="1" />   
+	   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" maxlength="1"/> 
+	   		<input type="submit" name="Ingresar" value="Ingresar letra"  />   
 		</form>
 		</center>
 	</body>
