Add Mensajes de Ganador/Perdedor

--- a/views/terminado.erb
+++ b/views/terminado.erb
@@ -4,6 +4,6 @@
 		<title>Ahorcado</title>
 	</head>
 	<body>
-	 	<center><h1>  PERDISTE!</h2>  </center>
+	 	<center><h1>  <%= @mensaje %></h2>  </center>
 	</body>
 </html>
