--- a/views/terminado.erb
+++ b/views/terminado.erb
@@ -5,5 +5,6 @@
 	</head>
 	<body>
 	 	<center><h1>  <%= @mensaje %></h2>  </center>
+	 		<center><h1> Palabra secreta: <%= @palabraSecreta %></h2>  </center>
 	</body>
 </html>
