Se agrega opcion de juego nuevo

--- a/views/juego.erb
+++ b/views/juego.erb
@@ -12,6 +12,7 @@
 	   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" maxlength="1"/> 
 	   		<input type="submit" name="Ingresar" value="Ingresar letra"  />   
 		</form>
+		<center> <a href="/" name="nuevoJuego" title="nuevoJuego"> Jugar de nuevo</a></center>
 		</center>
 	</body>
 </html>
