--- a/views/terminado.erb
+++ b/views/terminado.erb
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 	 	<center><h1>  <%= @mensaje %></h2>  </center>
+	 		<img src="./img/game_<%=@puntuacion%>.jpg" />
 	 		<center><h1> Palabra secreta: <%= @palabraSecreta %></h2>  
 	 			<a href="/" name="nuevoJuego" title="nuevoJuego"> Jugar de nuevo</a></center>
 	</body>
