fix espacio en blanco

--- a/views/juego.erb
+++ b/views/juego.erb
@@ -13,7 +13,7 @@
 			</div>
 			<h2> Tu puntuación : <%=@puntuacion%> </h2> 
 			<form method="post" action="/ingresarLetra"> 
-		   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" maxlength="1"/> 
+		   		Letra :<input type="text" name="letra" placeholder="ingresar Letra" maxlength="1" required /> 
 		   		<input type="submit" name="Ingresar" value="Ingresar letra"  />   
 			</form>
 			<br>
